# chat-git-pity

./: README.md  docker-compose.local.yml
.github/workflows/: frontendgrc.yml
backend/: Cargo.toml  Dockerfile
backend/proto/: chat.proto
backend/src/: chat.rs  lib.rs  main.rs
backend/tests/: health_check_test.rs
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: .gitignore  Cargo.toml  Dockerfile  index.html  style.css
frontend/src/: main.rs
shared/Domain/: message.rs
