[package]
name = "chatgipity-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
prost = "0.11"
tonic = { version = "0.9", features = ["tls"] }

[build-dependencies]
tonic-build = "0.9"