[package]
name = "chatgipity-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
serde = { version = "1.0.163", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"]}
web-sys = "0.3.63"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
gloo-console = "0.2.3"
serde_json = "1.0.96"